public/css/profile.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Source+Sans+Pro:wght@400;600;700&display=swap');

body {
  font-family: 'Source Sans Pro', sans-serif;
}

.edit-form-label {
  padding-top: .5em;
  padding-bottom: .5em;
  font-weight: bold;
}

.edit-form-input {
  margin-bottom: 1em;
}

#edit-user-info-form {
  display: flex;
  flex-direction: column;
}

button {
  cursor: pointer;
  padding: .3em;
  color: white;
  background-color: green;
  border-width: 1px;
  border-color: black;
  border-radius: 0.5em;
}

#admin-dashboard-button {
  margin-bottom: 1em;
  width: 12em;
}

#post-deal-link {
  margin-bottom: 1em;
  width: 12em;
}

#edit-profile-button {
  margin-bottom: 1em;
  width: 12em;
}

#image-upload {
  width: 15em;
}

#admin-dashboard-button {
  padding: .4em;
  color: white;
  background-color: green;
  border-width: 1px;
  border-color: black;
  border-radius: 0.5em;
}
.delete-deal-button{
  background-color: red;
  color: white;
  border-width: 1px;
  border-color: black;
  border-radius: 0.5em;
}
.edit-deal-button{
  background-color: yellow;
  border-width: 1px;
  border-color: black;
  border-radius: 0.5em;
}
.error {
  color: red;
}

